Added hovering image display for map

--- a/Heatmap_widgets.ipynb
+++ b/Heatmap_widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "imgs = {}\n",
+    "case_imgs = {}\n",
     "for imgfile in os.listdir('imgs/'):\n",
     "    if imgfile != '.ipynb_checkpoints':\n",
     "        file = open(\"imgs/\"+imgfile, \"rb\")\n",
     "        image = file.read()\n",
     "        imgs[imgfile.split('.')[0]] = image\n",
-    "image_widget = Image(\n",
+    "for imgfile in os.listdir('case_imgs/'):\n",
+    "    if imgfile != '.ipynb_checkpoints':\n",
+    "        file = open(\"case_imgs/\"+imgfile, \"rb\")\n",
+    "        image = file.read()\n",
+    "        case_imgs[imgfile.split('.')[0]] = image\n",
+    "misinfo_widget = Image(\n",
     "    value=imgs['CA'],\n",
     "    layout=Layout(height='252px', width='400px')\n",
-    "    )\n"
+    "    )\n",
+    "covid_widget = Image(\n",
+    "    value=case_imgs['CA'],\n",
+    "    layout=Layout(height='252px', width='400px'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +56,14 @@
     "        trace_index = points.trace_index\n",
     "        state = trace['locations'][ind]\n",
     "        if state in imgs:\n",
-    "            image_widget.value = imgs[state]\n",
+    "            misinfo_widget.value = imgs[state]\n",
+    "            covid_widget.value = case_imgs[state]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -61,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f2c313441a8447b833bad671c7a743f",
+       "model_id": "020e3b9e870a4863b1526c7447c49454",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +140,7 @@
     "fig.update_layout(layout)\n",
     "for trace in fig.data:\n",
     "    trace.on_hover(hover_fn)\n",
-    "VBox([fig, image_widget])"
+    "VBox([fig, HBox([misinfo_widget, covid_widget])])"
    ]
   },
   {
