--- a/Heatmap_widgets.ipynb
+++ b/Heatmap_widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import json, datetime as dt\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import HBox, VBox, Image, Layout\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,22 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\david\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\pandas\\core\\series.py:679: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in log10\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c2db4e511cb4eee80da4cfafefe8748",
+       "model_id": "5e8ad14906014b31988e0b5249779105",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'colorbar': {'title': {'text': 'Confirmed Cases'}},\n",
-       "              …"
+       "    'data': [{'colorbar': {'ticktext': [100, 1000, 10000, 100000, 300000],\n",
+       "     …"
       ]
      },
      "metadata": {},
@@ -90,14 +99,7 @@
     "    #data = json.load(f)\n",
     "    pandaData = pd.read_json(f)\n",
     "\n",
-    "fig = go.FigureWidget(data=[go.Choropleth(\n",
-    "    locations=pandaData[:50]['state'], # Spatial coordinates\n",
-    "    z = pandaData[:50]['positive'], # Data to be color-coded\n",
-    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
-    "    colorscale = 'Reds',\n",
-    "    colorbar_title = \"Confirmed Cases\",\n",
-    "    \n",
-    ")])\n",
+    "fig = go.FigureWidget()\n",
     "dataFramArr = []\n",
     "mydata = pd.DataFrame(columns=['date','state','positive'])\n",
     "currDate = \"\"\n",
@@ -114,11 +116,16 @@
     "for frame in dataFramArr:\n",
     "    trace = go.Choropleth(\n",
     "    locations=frame['state'], # Spatial coordinates\n",
-    "    z = frame['positive'], # Data to be color-coded\n",
+    "    z = np.log10(frame['positive']), # Data to be color-coded\n",
     "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
     "    colorscale = 'Reds',\n",
-    "    colorbar_title = \"Confirmed Cases\",   \n",
-    "    )\n",
+    "    text = frame['positive'],\n",
+    "    zmin = 1,\n",
+    "    zmax = 6,\n",
+    "    colorbar=dict(title='Confirmed Cases',\n",
+    "        tickvals = [2,3,4,5,5.5],\n",
+    "        ticktext = ['100','1000','10000','100000','300000'],\n",
+    "    ))\n",
     "    #trace.on_hover(hover_fn)\n",
     "    fig.add_trace(trace)  \n",
     "steps = []\n",
@@ -149,6 +156,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -167,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
